--- a/app/src/main/res/layout/act_article_upload_again.xml
+++ b/app/src/main/res/layout/act_article_upload_again.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:focusableInTouchMode="true"
     android:orientation="vertical">
 
@@ -11,59 +12,21 @@
 
     <include layout="@layout/include_common_network_status" />
 
-    <android.support.v4.widget.NestedScrollView
+    <android.support.design.widget.TabLayout
+        android:id="@+id/commonTabLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="@dimen/tab_height"
+        android:background="@color/white"
+        android:elevation="1dp"
+        app:tabIndicatorColor="#30BB9C"
+        app:tabMode="fixed"
+        app:tabSelectedTextColor="#30BB9C"
+        app:tabTextColor="@color/text_gray" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/white"
-                android:orientation="vertical">
-
-                <com.znz.compass.znzlibray.views.upload_image.UploadImageLayout
-                    android:id="@+id/uploadImage"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/distance_view" />
-
-                <LinearLayout
-                    android:id="@+id/llAdd"
-                    android:layout_width="match_parent"
-                    android:layout_height="160dp"
-                    android:layout_margin="@dimen/distance_view"
-                    android:background="#B2B2B2"
-                    android:gravity="center"
-                    android:orientation="vertical"
-                    android:visibility="gone">
-
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@mipmap/icon_tianjiazhaopian" />
-
-                    <TextView
-                        style="@style/TextWhiteStyle"
-                        android:layout_marginTop="@dimen/distance_divider"
-                        android:text="添加照片" />
-                </LinearLayout>
-
-            </LinearLayout>
-
-            <TextView
-                android:id="@+id/tvSubmit"
-                style="@style/BtnRoundStyle"
-                android:layout_marginBottom="30dp"
-                android:layout_marginLeft="30dp"
-                android:layout_marginRight="30dp"
-                android:layout_marginTop="20dp"
-                android:text="上传" />
-        </LinearLayout>
-    </android.support.v4.widget.NestedScrollView>
+    <android.support.v4.view.ViewPager
+        android:id="@+id/commonViewPager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1" />
 
 </LinearLayout>
