--- a/app/src/main/res/layout/act_file_list.xml
+++ b/app/src/main/res/layout/act_file_list.xml
@@ -17,7 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:text="该目录下没有文件"
+        android:text="该目录下没有Word文档"
         android:visibility="gone" />
 
     <android.support.v7.widget.RecyclerView
