--- a/app/src/main/res/layout/act_login.xml
+++ b/app/src/main/res/layout/act_login.xml
@@ -59,7 +59,7 @@
 
                 <com.znz.compass.znzlibray.views.EditTextWithDel
                     android:id="@+id/etUserName"
-                    style="@style/EditPhoneStyle"
+                    style="@style/EditSingleStyle"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:hint="手机号/用户名"
